<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3ADAD"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="667dp"
        android:layout_marginEnd="298dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Meter"
        android:onClick="MeterClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="665dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="18dp"
        android:text="@string/Celsius"
        android:onClick="CelsiusClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="667dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Kilogram"
        android:onClick="KilogramClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="281dp"
        android:layout_height="67dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="530dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="69dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/Output"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="283dp"
        android:layout_height="66dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="402dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="62dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/Output"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="283dp"
        android:layout_height="61dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="57dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/Output"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="166dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/Number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="163dp"
        android:layout_height="69dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="166dp"
        android:entries="@array/itemname"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toStartOf="@+id/edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
